--- a/services/tiktak/templates/feed.html
+++ b/services/tiktak/templates/feed.html
@@ -11,7 +11,7 @@
                 <div class="ui secondary segment">
                     <p><b>ID:</b> {{.ID}}</p>
                     <p><a href="/watch/{{ .ID}}">Watch</a> </p>
-                    <a href="/watch/{{ .ID}}"><img class="thumbnail" width="256" src="{{ .Preview}}"></a>
+                    <a href="/watch/{{ .ID}}"><img class="thumbnail" width="256" height="144" src="{{ .Preview}}"></a>
                 </div>
             </div>
         {{ end}}
